# FGA-DataScience.

./: pyproject.toml
projeto_app/src/utils/: contrato_para_data_vencimento.py  dolar_futuro.py  json_to_csv.py  networkday.py
