[tool.poetry]
name = "projeto-app"
version = "0.1.0"
description = ""
authors = ["yuridsfga <yuri.calzzani@fga.com.br>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
pandas = "^2.2.3"
openpyxl = "^3.1.5"
xlsxwriter = "^3.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
